--- a/ex03조건문.ipynb
+++ b/ex03조건문.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "0005051b",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "갖고 있는 돈을 입력하세요 >> 54\n",
       "걸어간다\n"
      ]
     }
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "4ce63e1f",
    "metadata": {},
    "outputs": [
@@ -60,9 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "첫 번째 정수입력>> 3\n",
-      "두 번째 정수입력>> 3\n",
-      "두 수가 똑같습니다\n"
+      "첫 번째 정수가 더 큽니다\n"
      ]
     }
    ],
@@ -78,14 +75,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e1e81eef",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "0dfb0b5e",
    "metadata": {},
    "outputs": [
@@ -93,17 +84,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "점수 입력 >> 70\n",
-      "70 점은 C학점 입니다.\n"
+      "-5 점은 F학점 입니다.\n"
      ]
     }
    ],
    "source": [
     "score = int(input(\"점수 입력 >> \"))\n",
     "if 100 >= score >= 90 :\n",
-    "    print(score , \"점은 A학점 입니다.\")\n",
+    "    print(str(score) + \"점은 A학점 입니다.\")\n",
     "elif 90 > score >= 80 :\n",
-    "    print(score , \"점은 B학점 입니다.\")\n",
+    "    print(f\"{score}점은 B학점 입니다.\")\n",
     "elif 80 > score >= 70 :\n",
     "    print(score ,  \"점은 C학점 입니다.\")\n",
     "elif 70 > score >= 60 :\n",
@@ -114,43 +104,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "90f04cb1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6460e4a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12495a3e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83e943f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db29bd8c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98 점은 A학점 입니다\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = int(input(\"점수 입력 >> \"))\n",
+    "\n",
+    "if score >=0 and score <=100 :\n",
+    "    if 100 >= score >= 90 :\n",
+    "        grade = \"A\"\n",
+    "    elif 90 > score >= 80 :\n",
+    "        grade = \"B\"\n",
+    "    elif 80 > score >= 70 :\n",
+    "        grade = \"C\"\n",
+    "    elif 70 > score >= 60 :\n",
+    "        grade = \"D\"\n",
+    "    else  :\n",
+    "        grade = \"F\"\n",
+    "    print(f\"{score} 점은 {grade}학점 입니다\")\n",
+    "else :\n",
+    "    print(\"잘못 입력 하였습니다.\")\n"
+   ]
   }
  ],
  "metadata": {
