--- a/ex05반복문.ipynb
+++ b/ex05반복문.ipynb
@@ -156,6 +156,41 @@
     "    else :\n",
     "        print(f\"두 정수의 합 : {num1+num2}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "현재 몸무게 >> 60\n",
+      "목표 몸무게 >> 50\n",
+      "1주차 감량 몸무게 >> 2\n",
+      "2주차 감량 몸무게 >> 3\n",
+      "3주차 감량 몸무게 >> 4\n",
+      "4주차 감량 몸무게 >> 3\n",
+      "48kg 달성!! 축하합니다!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 현재 몸무게와 목표 몸무게 입력 받기 / 주차별 몸무게 입력 받기\n",
+    "# 성공시에 축하합니다 출력 / 입력 멈춤\n",
+    "\n",
+    "num3 = int(input (\"현재 몸무게 >> \"))\n",
+    "num4 = int(input (\"목표 몸무게 >> \"))\n",
+    "cnt = 1\n",
+    "while num3 >= num4 :\n",
+    "    \n",
+    "    num5 = int (input (str(cnt)+\"주차 감량 몸무게 >> \"))\n",
+    "    cnt += 1\n",
+    "    num3 = num3 - num5 \n",
+    "\n",
+    "print(f\"{num3}kg 달성!! 축하합니다!\")"
+   ]
   }
  ],
  "metadata": {
