--- a/ex05반복문.ipynb
+++ b/ex05반복문.ipynb
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -766,8 +766,8 @@
     "for n, i in enumerate (movie_data) :\n",
     "    a = len(movie_data[n][0]) \n",
     "    length += a  \n",
-    "    \n",
-    "print(length / 5000 )"
+    "\n",
+    "print(length / len(movie_data) )"
    ]
   },
   {
